logs/tracannouncer.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/TracAnnouncer-0.11.1.egg-info'...
Listing './lib/python3.5/site-packages/announcerplugin'...
Compiling './lib/python3.5/site-packages/announcerplugin/api.py'...
***   File "./lib/python3.5/site-packages/announcerplugin/api.py", line 314
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/announcerplugin/distributors'...
Listing './lib/python3.5/site-packages/announcerplugin/formatters'...
Compiling './lib/python3.5/site-packages/announcerplugin/formatters/ticket_email.py'...
***   File "./lib/python3.5/site-packages/announcerplugin/formatters/ticket_email.py", line 190
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/announcerplugin/htdocs'...
Listing './lib/python3.5/site-packages/announcerplugin/htdocs/css'...
Listing './lib/python3.5/site-packages/announcerplugin/producers'...
Listing './lib/python3.5/site-packages/announcerplugin/resolvers'...
Listing './lib/python3.5/site-packages/announcerplugin/subscribers'...
Compiling './lib/python3.5/site-packages/announcerplugin/subscribers/rulefilters.py'...
***   File "./lib/python3.5/site-packages/announcerplugin/subscribers/rulefilters.py", line 31
    print "For", session_id, "Rule:", rule
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/announcerplugin/subscribers/ticket_compat.py'...
***   File "./lib/python3.5/site-packages/announcerplugin/subscribers/ticket_compat.py", line 153
    except ResourceNotFound, message:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/announcerplugin/templates'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
